Fix(web): Prevent from dropdown content overflow outside its container

--- a/packages/web/src/scss/components/Dropdown/_Dropdown.scss
+++ b/packages/web/src/scss/components/Dropdown/_Dropdown.scss
@@ -7,7 +7,6 @@
     z-index: 1;
     display: none;
     width: max-content;
-    max-width: 100%;
     padding: theme.$padding;
     border-radius: theme.$border-radius;
     background-color: theme.$background;
